[package]
name = "pngme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parse-display = "0.5.5"
# 如果要修改，记得使用下面这个库来完成安全的 [u8; 4] -> u32, 不要使用 unsafe
byteorder = "1.4.3"
crc = "2.1.0"
clap = { version = "3.0.0", features = ["derive"] }